# Intel7_Final_Project_5_Team

./: .gitignore  1~3week_report.md  README.md
.github/ISSUE_TEMPLATE/: plan.yml
RoS2/Sensor_Ros2/install/: local_setup.sh
RoS2/Sensor_Ros2/install/crop_task_vision/lib/crop_task_vision/: lidar_guard_node
RoS2/Sensor_Ros2/log/: latest_build
RoS2/Sensor_Ros2/src/wall_follower/config/: wall_follow_params.yaml
RoS2/Sensor_Ros2/src/wall_follower/wall_follower/: wall_follow_controller.py  waypoint_runner.py
RoS2/ros2_main_robot/robot_arm/install/: local_setup.sh
RoS2/ros2_main_robot/robot_arm/src/install/: local_setup.sh  setup.sh
RoS2/ros2_main_robot/turtlebot3_example/turtlebot3_example/install/: setup.bash  setup.sh
RoS2/ros2_main_robot/turtlebot3_example/turtlebot3_example/install/robot_arm/share/robot_arm/: package.xml
RoS2/ros2_main_robot/turtlebot3_example/turtlebot3_example/install/robot_arm/share/robot_arm/cmake/: robot_armConfig.cmake
doc/: 인텔7기_5조_실습재료_구매요구서_윤치영.xlsx
doc/meeting_note/: 1~3week_report.md
docs/: 2025-10-12-sulfurcamp.md  patrol_variants.md
install/: setup.sh
install/turtlebot3_example/lib/turtlebot3_example/: turtlebot3_interactive_marker  turtlebot3_relative_move
install/turtlebot3_example/share/turtlebot3_example/: package.sh
log/: latest_build
source/: .gitignore
source/ROS2/Sensor_Ros2/: README.md
source/ROS2/Sensor_Ros2/install/: setup.ps1  setup.sh
source/ROS2/Sensor_Ros2/install/i2c_distance_publisher/share/i2c_distance_publisher/: local_setup.dsv  package.ps1  package.xml  package.zsh
source/ROS2/Sensor_Ros2/log/: latest_build
source/ROS2/Sensor_Ros2/src/sub_robot_bringup/: package.xml
source/ROS2/Sensor_Ros2/src/sub_robot_sim/: CMakeLists.txt
source/ROS2/followerbot_src/ros2_ws/src/grove_tof_simple/: CMakeLists.txt  README.md  package.xml
source/ROS2/followerbot_src/ros2_ws/src/grove_tof_simple/config/: rpi_config.yaml
source/ROS2/followerbot_src/ros2_ws/src/grove_tof_simple/launch/: rpi_tof_sensor.launch.py  tof_sensor.launch.py
source/ROS2/followerbot_src/ros2_ws/src/grove_tof_simple/src/: grove_distance_publisher.cpp  grove_distance_subscriber.cpp
source/ROS2/followerbot_src/turtlebot3_ws/: GEMINI.md  dual_patrol.launch.py  follower_readjustment_logic.md  frames_2025-10-19_17.13.56.gv  map.yaml
source/ROS2/followerbot_src/turtlebot3_ws/src/Sensor_Ros2/src/crop_task_vision/: CMakeLists.txt  package.xml
source/ROS2/followerbot_src/turtlebot3_ws/src/Sensor_Ros2/src/wall_follower/: package.xml  setup.py
source/ROS2/followerbot_src/turtlebot3_ws/src/Sensor_Ros2/src/wall_follower/config/: waypoints.yaml
source/ROS2/followerbot_src/turtlebot3_ws/src/teleop_adv/: package.xml  setup.cfg  setup.py
source/ROS2/followerbot_src/turtlebot3_ws/src/teleop_adv/resource/: teleop_adv
source/ROS2/followerbot_src/turtlebot3_ws/src/teleop_adv/teleop_adv/: __init__.py
source/ROS2/install/: local_setup.sh  setup.bash  setup.ps1  setup.zsh
source/ROS2/leaderbot_src/Sensor_Ros2/src/crop_task_vision/: CMakeLists.txt
source/ROS2/leaderbot_src/Sensor_Ros2/src/crop_task_vision/config/: crop_task_params.yaml
source/ROS2/leaderbot_src/Sensor_Ros2/src/crop_task_vision/src/: crop_task_node.cpp  lidar_guard_main.cpp  lidar_guard_node.cpp
source/ROS2/leaderbot_src/Sensor_Ros2/src/i2c_distance_publisher/: CMakeLists.txt
source/ROS2/leaderbot_src/Sensor_Ros2/src/sub_robot_core/: CMakeLists.txt  package.xml
source/ROS2/leaderbot_src/Sensor_Ros2/src/sub_robot_core/params/: controller.yaml
source/ROS2/leaderbot_src/Sensor_Ros2/src/sub_robot_core/src/: sub_controller.cpp  sub_controller_node.cpp
source/ROS2/leaderbot_src/map_gazebo/: cleaned_up_map.pgm  cleaned_up_map.yaml
source/ROS2/leaderbot_src/patrol_bundle/turtlebot3_example/: setup.py
source/ROS2/patrol_bundle/maps/: map.pgm
source/ROS2/robot_arm/robot_arm/: CMakeLists.txt
source/ROS2/robot_arm/robot_arm/src/: robot_arm_server.cpp
source/ROS2/ros2_main_robot/robot_arm/install/: setup.sh
source/ROS2/ros2_main_robot/turtlebot3_bringup/launch/: robot.launch.py
source/ROS2/ros2_main_robot/turtlebot3_example/: setup.py
source/ROS2/turtlebot3_ws/tools/vl53_i2c/: Makefile
source/robot_arm/robot_arm/: CMakeLists.txt
source/robot_arm/robot_arm/src/: robot_arm_client.cpp  robot_arm_server.cpp
source/ros2_ws/: .gitignore
source/ros2_ws/src/grove_tof_simple/: CMakeLists.txt  README.md
source/ros2_ws/src/grove_tof_simple/src/: grove_distance_publisher.cpp
source/ros2_ws/src/parking-a-lot/: CMakeLists.txt  package.xml
source/ros2_ws/src/turtlebot3_follower/src/: follower.cpp
source/stm32/robot_arm_servoshield/: .mxproject  robot_arm_servoshield.ioc
source/stm32/robot_arm_servoshield/Core/Inc/: stm32f4xx_it.h
source/stm32/robot_arm_servoshield/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
source/turtlebot3_ws/: GEMINI.md  map.pgm
source/turtlebot3_ws/src/Sensor_Ros2/install/: setup.bash  setup.zsh
source/turtlebot3_ws/src/install/: local_setup.sh  setup.sh
source/turtlebot3_ws/src/log/: latest_build
source/turtlebot3_ws/src/teleop_adv/teleop_adv/: teleop_overlay.py
source/turtlebot3_ws/src/turtlebot3_applications/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
source/turtlebot3_ws/src/turtlebot3_applications/log/: latest_build
source/turtlebot3_ws/src/turtlebot3_applications/turtlebot3_parallel_follower/: CMakeLists.txt  package.xml  reality_robot.rviz
source/turtlebot3_ws/src/turtlebot3_applications/turtlebot3_parallel_follower/include/turtlebot3_follower/: follower.hpp
source/turtlebot3_ws/src/turtlebot3_applications/turtlebot3_parallel_follower/launch/: follow_the_leader.launch.py  minimal_localization.launch.py  parallel_follower.launch.py
source/turtlebot3_ws/src/turtlebot3_applications/turtlebot3_parallel_follower/param/: amcl_params.yaml  control_server1.yaml  controll_server1.yaml
source/turtlebot3_ws/src/turtlebot3_applications/turtlebot3_parallel_follower/src/: follower.cpp  parking_a_lot.cpp
turtlebot3_ws/tools/vl53_i2c/: setup_vl53_addresses.py
(+546 files in other folders)
