<?xml version="1.0"?>
<package format="3">
  <name>sub_robot_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configuration for the sub robot MVP.</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sub_robot_core</depend>
  <depend>sub_robot_sim</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
