<?xml version="1.0"?>
<package format="3">
  <name>teleop_adv</name>
  <version>0.0.1</version>
  <description>Enhanced teleop tools for TurtleBot3.</description>
  <maintainer email="user@example.com">TurtleBot Operator</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
