<?xml version="1.0"?>
<package format="3">
  <name>i2c_distance_publisher</name>
  <version>0.1.0</version>
  <description>Publishes sensor_msgs/Range from an I2C distance sensor (e.g. ToF) for TurtleBot integration.</description>

  <maintainer email="maintainer@example.com">Intel Study Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
