<?xml version="1.0"?>
<package format="3">
  <name>crop_task_vision</name>
  <version>0.1.0</version>
  <description>OpenCV-based crop detection and task orchestration for the patrol workflow.</description>

  <maintainer email="maintainer@example.com">Intel Study Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>OpenCV</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
